--- a/table.html
+++ b/table.html
@@ -4,10 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>timeline</title>
+    <style>
+        td{
+            text-align: center;
+            border: 1px solid blue;
+            color: red;
+        }
+    </style>
 </head>
 <body>
-    <table border="1" width="70%">
+    <table border="1" width="60%">
+        <caption style="caption-side:bottom">Tablo Example</caption>
         <thead>
             <tr>
                 <th rowspan="2">Day</th>
@@ -22,16 +30,32 @@
         </thead>
         <tbody>
             <tr>
-                <td>Tuesday</td>
-                <td>07:00 am</td>
-                <td>Monday</td>
-                <td>Monday</td>
+                <td align="center">Tuesday</td>
+                <td>07:00 a.m</td>
+                <td>11:00 a.m</td>
+                <td rowspan="2">
+                    Computer Fundamental
+                    <ul>
+                        <li>Hardware</li>
+                        <li>OS</li>
+                        <li>Storage</li>
+                        <li>Data</li>
+                    </ul>
+                </td>
             </tr>
             <tr>
-                <td>Thursday</td>
-                <td>Thursday</td>
-                <td>Thursday</td>
-                <td>Thursday</td>
+                <td rowspan="3" align="center">Thursday</td>
+                <td>07:00 a.m</td>
+                <td>07:50 a.m</td>
+            </tr>
+            <tr>
+                <td>07:00 a.m</td>
+                <td>07:50 a.m</td>
+                <td rowspan="2">HTML<br>CSS</td>
+            </tr>
+            <tr>
+                <td>07:00 a.m</td>
+                <td>07:50 a.m</td>
             </tr>
 
         </tbody>
